[project]
name = "ws.mastodump"
version = "1.0.1"
description = "Incremental export of mastodon posts and boosts to plain text"

dependencies = [
  "mastodon-py",
]
# optional-dependencies = {"test": []}

scripts = {mastodump="ws.mastodump.backup:main"}

authors = [{name="Wolfgang Schnerring", email="wosc@wosc.de"}]
license = {text=" GPL-3.0-or-later"}
urls = {repository="https://github.com/wosc/mastodump"}

dynamic = ["readme"]

[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ws"]  # required for pep420 namespace package, pypa/hatch#587

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [{path="README.md"}, {text="\n\n"}, {path="CHANGES.md"}]
